--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
